--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
 
   <!-- Our CSS -->
-  <link rel="stylesheet" type="text/css" href="/static/css/style.css">
+  <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
 </head>
 
 <body>
@@ -29,9 +29,9 @@
 
 
   <!-- API key -->
-  <script type="text/javascript" src="/static/js/config.js"></script>
+  <script type="text/javascript" src="/assets/js/config.js"></script>
   <!-- Our JS -->
-  <script type="text/javascript" src="/static/js/logic.js"></script>
+  <script type="text/javascript" src="/assets/js/logic.js"></script>
 
     <!-- Footer-->
     <div id="footer">
